tests/parser/invalid/syntax_errors/test_invalid_return.src
return x y;
return +;
return 1 2;
return;
return